fixed alignment of middle time label again

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ a {
 }
 
 h1, h2 {
+  white-space: pre;
   user-select: none;
   font-size: inherit;
   text-decoration: none;
